<resources>
    <string name="app_name">Finger Dance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="multiplayer">Dare to poke tiles?</string>
    <string name="pleasewait">Please wait ...</string>
    <string name="blackwinner">Black Wins!!</string>
    <string name="whitewinner">White wins!!!</string>
    <string name="wrong_des">Oops! Finger Moved or Wrongly touched</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="selectlevel">Select Level</string>
    <string name="instruction">Dont move or take your fingers from block.</string>
    <string name="store_points">Click store button to store MAXIMUM pointers.</string>
</resources>
