<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_select_level"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.finger.dance.activities.SelectLevel">
    <com.finger.dance.component.ui.RadialGradientView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:centerX=".5"
        app:centerY=".5"
        app:startColor="@color/background_green_start"
        app:endColor="@color/background_green_end"
        app:gradientRadiusWidthPercent="1"
        />

    <Button
        android:layout_centerInParent="true"
        android:background="@color/color8"
        android:text="@string/easy"
        android:layout_margin="@dimen/butmargin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:id="@+id/easy" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/easy"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:gravity="center">

        <Button
            android:background="@color/color9"
            android:text="@string/medium"
            android:layout_margin="@dimen/butmargin"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/button"
            android:id="@+id/medium" />

        <Button
            android:background="@color/color7"
            android:text="@string/hard"
            android:layout_margin="@dimen/butmargin"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/hard" />

    </LinearLayout>

    <com.finger.dance.component.ui.CustomTextView
        android:text="@string/selectlevel"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:letterSpacing="0.09"
        android:textColor="@color/black"
        android:id="@+id/textView6"
        android:layout_margin="20dp"
        android:layout_above="@+id/easy"
        android:layout_centerHorizontal="true" />

    <com.finger.dance.component.ui.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/head"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:transitionName="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />


</RelativeLayout>
