<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bck"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.finger.dance.component.ui.RadialGradientView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:centerX=".5"
        app:centerY=".5"
        app:startColor="@color/background_pink_start"
        app:endColor="@color/background_pink_end"
        app:gradientRadiusWidthPercent="1"
        />
    <com.finger.dance.component.ui.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/head"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_below="@+id/head"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@color/white"
                android:layout_marginRight="5dp"/>
        <com.finger.dance.component.ui.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
            </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/black"
            android:layout_marginRight="5dp"/>
        <com.finger.dance.component.ui.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/player2"
            android:padding="5dp"
            android:textColor="@color/black"
            />
        </LinearLayout>
    </LinearLayout>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_view"
    android:layout_centerInParent="true"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

    <com.finger.dance.component.ui.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>